Bug 70229 - UI: New sidebar-ized custom animation list misses tree option
Summary: UI: New sidebar-ized custom animation list misses tree option
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.2.0
Keywords: regression
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2013-10-07 14:28 UTC by Thorsten Behrens (allotropia)
Modified: 2013-10-11 21:43 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
bugdoc (11.08 KB, application/vnd.oasis.opendocument.presentation)
2013-10-07 14:28 UTC, Thorsten Behrens (allotropia)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thorsten Behrens (allotropia) 2013-10-07 14:28:12 UTC
Created attachment 87238 [details]
bugdoc

Load attached bugdoc, notice the missing '+' in front of the single animation item (in the custom animation sidebar panel). Compare that to 4.1.x. Problem is, without that one cannot edit any effect option, since that is disabled if you don't select leaf nodes in that tree...
Comment 1 Commit Notification 2013-10-11 19:08:36 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9b6b916ef39619f681f714397a0e3f85f442833d

Resolves: fdo#70229 restore ResID logic to ui ctor



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Caolán McNamara 2013-10-11 19:11:31 UTC
regression from 4438fca46a16a59f9a24fc6c8221beaf4b039c57