Resolves: fdo#70229 restore ResID logic to ui ctor

Change-Id: Ib4df8fc317e6fd21531a9dbd898cbdeef0783452